    so you must fix your application, and rebuild your index, to not
    rely on this behavior by the 3.0 release of Lucene. (Jonathan
    Mamou, Mark Miller via Mike McCandless)

 7. LUCENE-1708 - IndexReader.document() no longer checks if the document is 
    deleted. You can call IndexReader.isDeleted(n) prior to calling document(n).
    (Shai Erera via Mike McCandless)

API Changes

1. LUCENE-1419: Add expert API to set custom indexing chain. This API is 
   package-protected for now, so we don't have to officially support it.
   Yet, it will give us the possibility to try out different consumers
   in the chain. (Michael Busch)

2. LUCENE-1427: DocIdSet.iterator() is now allowed to throw
   IOException.  (Paul Elschot, Mike McCandless)

3. LUCENE-1451: Add public constructors to FSDirectory and subclasses,
   and deprecate FSDirectory.getDirectory().  FSDirectory instances
   are not required to be singletons per path. (yonik)

4. LUCENE-1422: New TokenStream API that uses a new class called 
   AttributeSource instead of the now deprecated Token class. All attributes
   that the Token class had have been moved into separate classes:
   TermAttribute, OffsetAttribute, PositionIncrementAttribute, 
   PayloadAttribute, TypeAttribute and FlagsAttribute. The new API
   is much more flexible; it allows to combine the Attributes arbitrarily 
   and also to define custom Attributes. The new API has the same performance
   as the old next(Token) approach. (Michael Busch)

5. LUCENE-1467: Add nextDoc() and next(int) methods to OpenBitSetIterator.
   These methods can be used to avoid additional calls to doc(). 
   (Michael Busch)

6. LUCENE-1468: Deprecate Directory.list(), which sometimes (in
   FSDirectory) filters out files that don't look like index files, in
   favor of new Directory.listAll(), which does no filtering.  Also,
   listAll() will never return null; instead, it throws an IOException
   (or subclass).  Specifically, FSDirectory.listAll() will throw the