@@ -935,36 +935,6 @@ operator|+
 name|path
 return|;
 block|}
-DECL|method|finalize
-specifier|public
-name|void
-name|finalize
-parameter_list|()
-throws|throws
-name|Throwable
-block|{
-try|try
-block|{
-if|if
-condition|(
-name|isLocked
-argument_list|()
-condition|)
-block|{
-name|release
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-finally|finally
-block|{
-name|super
-operator|.
-name|finalize
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 block|}
 end_class
 end_unit
