@@ -251,29 +251,6 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
-DECL|method|finalize
-specifier|protected
-name|void
-name|finalize
-parameter_list|()
-throws|throws
-name|Throwable
-block|{
-try|try
-block|{
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-finally|finally
-block|{
-name|super
-operator|.
-name|finalize
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 block|}
 DECL|field|file
 specifier|protected
